@@ -2,7 +2,12 @@ Premake-based Windows Build System
 Contributed by Jason Perkins (jason379@users.sourceforge.net)
 -------------------------------------------------------------------
 
-This is my first take. It works fairly well, but hasn't been 
-thorougly tested yet. Once I'm convinced the system is reasonably
-bulletproof I will write up additional documentation, including
-how to generate custom project files.
+SVN USERS: Before using these project files you must copy
+config-default.h to ode/include/ode/config.h. 
+
+This is my first take on a replacement set of Visual Studio project
+files. They work fairly well, but have not been thorougly tested 
+yet. Once I'm convinced the system is reasonably bulletproof I will 
+write up additional documentation, including how to generate custom 
+project files, and merge everything into the project trunk.
+
