@@ -8,6 +8,10 @@ the rules for this file:
   * keep the format consistent (79 char width, M/D/Y date format).
 
 ------------------------------------------------------------------------------
+03/20/06 jason379
+
+	* Added new autogenerated Visual Studio projects, with Premake scripts
+	
 02/04/06 gcarlton
 
 	* Added support for geom offsets.
@@ -46,7 +50,7 @@ the rules for this file:
 09/22/04 jeff
 
 	* Assorted small bugfixes and tweaks for
-          trimesh_{box,ccylinder,trimesh} collisions
+	  trimesh_{box,ccylinder,trimesh} collisions
 
 09/21/04 jeff
 
